# DigitalSignatureChecker

./: .gitignore  CMakeLists.txt
src/: App.pro  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
