cmake_minimum_required(VERSION 3.5)
project(Signing)

set(CMAKE_CXX_STANDARD 11)

set(SIGNING_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(SIGNING_BIN_DIR ${SIGNING_DIR_DIR}/bin)
set(SIGNING_LIB_DIR ${SIGNING_DIR_DIR}/lib)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${SIGNING_LIB_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${SIGNING_LIB_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${SIGNING_BIN_DIR})

set(SIGNING_DEBUG_POSTFIX d)

add_subdirectory(src)
